team-troy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djl-app
spec:
  type: LoadBalancer
  selector:
    app: djl-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
