team-troy/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: djl-api-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: djl-port
          servicePort: 80
        path: /inference
